2022-12-20  Jacob Bachmeyer  <jcb@gnu.org>

	* doc/dejagnu.texi (DejaGnu unit test protocol): Add ERROR and
	WARNING tokens to DejaGnu unit testing protocol.
	* lib/dejagnu.exp (host_execute): Implement same.
	* testsuite/runtest.main/nested/testsuite/stat.test/unit-sub.exp,
	  testsuite/runtest.main/nested/testsuite/stat.test/unit-sub.awk:
	Add support for testing ERROR and WARNING tokens.
	* testsuite/runtest.main/stats.exp: Add tests for UNRESOLVED
	results after warnings and errors in unit test programs.

	* testsuite/runtest.main/stats.exp: Add tests for UNRESOLVED
	results after warnings and errors.
	* testsuite/runtest.main/nested/testsuite/stat.test/stats-sub.exp:
	Add support for above.

2022-11-30  Jacob Bachmeyer  <jcb@gnu.org>

	* testsuite/libdejagnu/unit.exp: Rename this...
	* testsuite/libdejagnu/harness.exp: ...to this.

	* doc/dejagnu.texi (C++ unit testing API): Document recent
	improvements and the rest of the C++ API.

	* dejagnu.h (TestState::TestState): Only perform initialization
	when the first TestState object is constructed.
	(DG): Add global TestState object.

	* dejagnu.h (DG__endmsg): New function, called using atexit().
	(endmsg_registered, TestState_count): Add fields to DG__status.
	(DG__init): New function, to register DG__endmsg.
	(pass, xpass, fail, xfail, untested, unresolved, unsupported)
	(note): Call DG__init to ensure libdejagnu initialization.
	(totals): Move "END" message to DG__endmsg.
	(TestState::TestState): Consider DG__endmsg registered when a
	TestState object is constructed.
	(TestState::TestState, TestState::~TestState): Track number of
	live TestState objects in global status structure.
	(TestState::~TestState): Call totals() and emit "END" message only
	when the last TestState object is destroyed.

	* dejagnu.h (outstate): Remove.
	(TestState::pass, TestState::xpass, TestState::fail)
	(TestState::xfail, TestState::untested, TestState::unresolved)
	(TestState::unsupported, TestState::note): Remove support for